# Creation date: 2025.09.29
# Copyright Youcef Lemsafer
# MIT License

[package]
name = "sc-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
getrandom = { version = "0.2", features = ["js"] }
sc-shared = { path = "../sc-shared" }
rand = "0.8"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Deactivated for fast tests
