# Creation date: 2025.09.29
# Copyright Youcef Lemsafer, all rights reserved.

[package]
name = "sc-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
byteorder = "1.5.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Deactivated for fast tests
