# Creation date: 2025.09.29
# Copyright (c) 2025-2026 Youcef Lemsafer
# SPDX-License-Identifier: MIT

 [package]
name = "sendcipher-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["generic"]
generic = []
wasm = ["wasm-bindgen"]  # WASM bindings


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
byteorder = "1.5.0"
anyhow = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
digest = "0.10"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
thiserror = "1.0"
log = "0.4.28"
blake3 = "1.8.2"
parking_lot = "0.12.5"

[dev-dependencies]
test-case = "3.3"
proptest = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.wasm-bindgen]
rustflags = ["-C", "target-feature=+simd128"]

