[package]
name = "sendcipher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env", "cargo"] }
http = "1.4.0"
sc-client = { version = "0.1.0", path = "../sc-client" }
sc-common = { version = "0.1.0", path = "../sc-common" }
serde = "1.0.228"
serde_json = "1.0.147"
ureq = "3.1.4"
chrono = "0.4.43"
