# Copyright (c) 2025-2026 Youcef Lemsafer
# SPDX-License-Identifier: MIT

[package]
name = "sendcipher"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
description = "Command line interface for encrypted file sharing at sendcipher.com"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/youcefl/sendcipher"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env", "cargo"] }
http = "1.4.0"
sendcipher-core = { version = "0.1.0", path = "../sendcipher-core" }
sendcipher-common = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.147"
ureq = "3.1.4"
chrono = "0.4.43"
